# stm32f103-8-bit-clock-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  STM32F103C8Tx_FLASH.ld  build.sh  test_runner  test_runner.c
Core/Inc/: config.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  system_stm32f1xx.c
cmake/: arm-none-eabi-gcc.cmake
docs/: COMPREHENSIVE_IMPLEMENTATION.md  INVERSE_POLARITY_IMPLEMENTATION.md  frequency_mapping.md
inc/: clock_generator.h  config.h  stm32f1xx_hal_conf.h
include/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
scripts/: build.sh  download_hal.sh  validate_setup.sh
src/: clock_generator.c  main.c  startup_stm32f103c8tx.s  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c  test_frequency_mapping.c
tests/: Makefile  test_functionality  test_functionality.c  test_inverse_polarity.c
